--- a/bower.json
+++ b/bower.json
@@ -3,7 +3,8 @@
   "description": "my element",
   "main": "my-el.html",
   "dependencies": {
-    "polymer": "Polymer/polymer#^1.4.0"
+    "polymer": "Polymer/polymer#^1.4.0",
+    "d2l-menu": "^0.2.3"
   },
   "devDependencies": {
     "iron-component-page": "PolymerElements/iron-component-page#^1.0.0",
